--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <p>Lembre-se: você é capaz de realizar o impossível</p>
     <p>Não desista, supere.</p>
+    <p>Eu já me via formado antes mesmo de começar. Acreditei, trabalhei e o universo conspirou. Hoje, celebro a realização de um sonho que já era meu no coração</p>
 </body>
 </html>
